# Tirocinio

./: README.md  fedAvg.py  fedAvgIID.py  pyproject.toml
Immagini/: readme
MedMNIST/: cent_utils_medmnist.py  fed_utils_medmnist.py  med_mnist.py
Sorgenti/: cent_utils_medmnist.py  fedAvgNonIID.py  fed_utils_medmnist.py  fhd_federato.py  med_mnist.py  readme
Sorgenti/MedMNIST/: cent_utils_medmnist.py  fed_utils_medmnist.py  med_mnist.py  readme.md
Sorgenti/fashionMNIST/: fedAvgConv.py
Sorgenti/fed-heart-disease/: centralized_utils.py  federated_utils.py  fhd_fed+cent.py  fhd_federato.py
fashonMNIST/: fedAvgConv.py  fedAvgIID.py  script.py
flamby/: centralized_utils.py  federated_utils.py  fhd_centralizzato.py  fhd_fed+cent.py  fhd_federato.py
