[project]
name = "esercizio2"
version = "1.0.0"
description = "Primi esercizi"
authors = [
    {name = "Davide"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "torch (>=2.8.0,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "llvmlite (==0.40.1)",
    "seaborn (>=0.13.2,<0.14.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "medmnist (>=3.0.2,<4.0.0)"
]

[tool.poetry.dependencies]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
